# smashline-template

./: Cargo.toml  README.md
.github/workflows/: rust_build.yml
src/: lib.rs
